Fix a correction that was wrong, and close the backlog
The run task is configured in code/gradle/distribution.gradle, not
build.gradle. This morning's edit removed a correct sentence because the
reviewer and I both grepped only build.gradle. Restored, with the right
citation.

- run does depend on assemble, so it rebuilds the plugin jars. Verified
  with gradlew run --dry-run: jarAllPlugins -> jar -> assemble -> run.
  The real gotcha is an IDE launch, which skips Gradle entirely.
- run does replace jvmArgs wholesale in a doFirst block, and does add
  -ea and --enable-preview.
- gradlew run --debug-jvm prints "Listening for transport dt_socket at
  address: 5005" and waits. The page now quotes it.

Closes both backlog items:
- PropertyContext namespacing, in startup.md. One options.ini, every
  child context prefixing name + '.' at each hop, and a mis-namespaced
  read returning the default with nothing logged.
- facets.md now says when a facet is wrong: derived state is a facet,
  user-set state that must survive a save is a channel.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Q75HunHbLN1uwG97XeCCBj